@@ -1,3 +1,8 @@
+Mon Sep 15 15:20:52 2003  George Lebl <jirka@5z.com>
+
+	* mailcheck.c: when started in lockdown mode, hide the preferences
+	  item
+
 Mon Sep 15 14:23:05 2003  George Lebl <jirka@5z.com>
 
 	* mailcheck.c, popcheck.c: get rid of compiler warnings
